--- a/Message Sender/index.html
+++ b/Message Sender/index.html
@@ -6,7 +6,14 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-   
+   <div id= "container">
+ <h1> Message You'd Like To Send</h1>
+ <input type= "text" name="Type Your Message Here" id="messageHere">
+ <button type="button" id="buttonSend">Click Here To Send</button>
+ <h1>Message Delivered</h1>
+<h1 id="messageOut"></h1>
+
+   </div>
 
 <script src ="script.js"></script>
 </body>
