--- a/Message Sender/index.html
+++ b/Message Sender/index.html
@@ -8,10 +8,10 @@
 <body>
    <div id= "container">
  <h1> Message You'd Like To Send</h1>
- <input type= "text" name="Type Your Message Here" id="messageHere">
+ <input type= "text" name="Type Your Message Here" id="messageInput">
  <button type="button" id="buttonSend">Click Here To Send</button>
  <h1>Message Delivered</h1>
-<h1 id="messageOut"></h1>
+<h1 id="messageOutput"></h1>
 
    </div>
 
