--- a/Message Sender/index.html
+++ b/Message Sender/index.html
@@ -1,20 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Message Passer</title>
-<link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-   <div id= "container">
- <h1> Message You'd Like To Send</h1>
- <input type= "text" name="Type Your Message Here" id="messageInput">
- <button type="button" id="buttonSend">Click Here To Send</button>
- <h1>Message Delivered</h1>
-<h1 id="messageOutput"></h1>
+  <head>
+    <meta charset="utf-8" />
+    <title>Message Passer</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1>Message You'd Like To Send</h1>
+      <input type="text" name="Type Your Message Here" id="messageInput" />
+      <button type="button" id="buttonSend">Click Here To Send</button>
+      <h1>Message Delivered</h1>
+      <h1 id="messageOutput"></h1>
+    </div>
 
-   </div>
-
-<script src ="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
